cluster-config/calico-policys/allow-egress-from-mockbank-to-database.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: default.allow-egress-from-mockbank-to-database-port-80
  namespace: mockbank
spec:
  selector: all() 
  egress:
    - action: Allow
      protocol: TCP
      destination:
        namespaceSelector: 'projectcalico.org/name == "database"'
        ports:
          - 3306
