cluster-config/calico-policys/allow-ingress-from-mockbank-to-database.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: default.allow-mockbank-to-database-only-port-3306
  namespace: database
spec:
  selector: all()
  ingress:
    - action: Allow
      protocol: TCP
      source:
        namespaceSelector: 'projectcalico.org/name == "mockbank"'
        selector: app == "user-management-api"
      destination:
        ports:
          - 3306
