cluster-config/calico-policys/globalnetworkpolicy-denyall.yaml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: default.deny-all-policy
spec:
  namespaceSelector: has(projectcalico.org/name) && projectcalico.org/name not in {"kube-system", "calico-system", "tigera-system", "argocd", "istio-system"}
  types:
  - Ingress
  - Egress
  ingress:
  - action: Allow
    source:
      nodeSelector: 'node-role.kubernetes.io/worker == ""'
  egress:
  - action: Allow
    protocol: UDP
    destination:
      selector: 'k8s-app == "kube-dns"'
      ports:
      - 53
  - action: Allow
    protocol: TCP
    destination:
      selector: 'k8s-app == "kube-dns"'
      ports:
      - 53
  egress:
  - action: Allow
    protocol: TCP
    destination:
      selector: 'k8s-app == "istiod"'
      ports:
      - 15010
